--- a/app/stylesheets/modal.sass
+++ b/app/stylesheets/modal.sass
@@ -10,13 +10,16 @@
   cursor: pointer
 
 #simplemodal-overlay
-  background-color: black
+  background-color: #000
   cursor: wait
 
 #simplemodal-container
-  background-color: #FFF
+  +border-radius(12px)
+  +box-shadow(#333, 10px, 10px, 20px)
+
+  background-color: #000
   border: 4px solid #444
-  color: #000
+  color: #fff
   padding: 12px
   max-height: 320px
   max-width: 600px
@@ -24,6 +27,7 @@
   .simplemodal-wrap
     max-height: 320px
     max-width: 600px
+    overflow-y: auto
 
 .modalElement
   display: none
